--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,4 @@
-<h1>Pages Home</h1>
-
-<ul>
-  <li><%= link_to 'About', about_path %></li>
-  <li><%= link_to 'Blog Articles', articles_path %></li>
-  <li><%= link_to 'Welcome', welcome_home_path %></li>
-</ul>
+<div class="center jumbotron">
+  <h1>BLOG-V</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-lg btn-xlarge"%>
+</div>
