Add user data to articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,6 +41,11 @@ $navbar-default-bg: black;
   color: #a0f6af
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .btn-xlarge:hover {
   background-color: #042d0b;
   color: #fff;
