--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="form-group">
-        <%= f.label :description, class: "control-label col-sm-2" %>
+        <%= f.label :email, class: "control-label col-sm-2" %>
         <div class="col-sm-8">
           <%= f.email_field :email, class: "form-control", placeholder: "Enter email" %>
         </div>
